--- a/Natsuko夏夏子全集/menu.html
+++ b/Natsuko夏夏子全集/menu.html
@@ -36,8 +36,8 @@
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E8%B5%9B%E5%8D%9A%E6%9C%8B%E5%85%8B%E8%BE%B9%E7%BC%98%E8%A1%8C%E8%80%85Lucy-61P-08-21">Natsuko夏夏子 赛博朋克边缘行者Lucy 61P</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E9%BE%99%E5%B9%B4%E6%96%B0%E6%98%A5-45P-08-21">Natsuko夏夏子 龙年新春 45P</a></p>
   <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%86%8A%E7%8C%AB%E5%A5%B3%E4%BB%8664P1V-08-21">Natsuko夏夏子 熊猫女仆64P1V</a></p>
-<p><a href="../index.html">返回总目录</a></p>
-<p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E9%87%8C%E9%9B%85%E6%96%AF%E7%89%B9%E6%B8%A9%E6%B3%89%E5%A4%9C-62P-08-22">Natsuko夏夏子 碧蓝航线 里雅斯特温泉夜 62P</a></p>
+  <p><a href="https://telegra.ph/Natsuko%E5%A4%8F%E5%A4%8F%E5%AD%90-22%E5%9C%A3%E8%AF%9E-30P1V-08-22">Natsuko夏夏子 22圣诞 30P1V</a></p>
 <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
