--- a/Tina很妖孽呀全集/menu.html
+++ b/Tina很妖孽呀全集/menu.html
@@ -9,8 +9,8 @@
   <p><a href="https://telegra.ph/Tina%E5%BE%88%E5%A6%96%E5%AD%BD%E5%91%80-%E5%A5%88%E5%A5%88%E5%90%8C%E5%AD%A6---%E5%9C%A3%E8%AF%9E%E8%8A%82%E9%99%90%E5%AE%9A-82P1V-428M-08-20">Tina很妖孽呀 &奈奈同学 - 圣诞节限定 [82P1V-428M]</a></p>
   <p><a href="https://telegra.ph/Tina%E5%BE%88%E5%A6%96%E5%AD%BD%E5%91%80-%E5%A6%B9%E5%A6%B9%E5%9C%A8%E5%AE%B6%E7%9A%84%E7%A7%98%E5%AF%86-56P1V-08-21">Tina很妖孽呀 妹妹在家的秘密 56P1V</a></p>
   <p><a href="https://telegra.ph/Tina%E5%BE%88%E5%A6%96%E5%AD%BD%E5%91%80-%E7%9F%AD%E5%8F%91%E5%A5%B3%E7%89%B9%E5%B7%A5-42P-08-21">Tina很妖孽呀 短发女特工 42P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Tina%E5%BE%88%E5%A6%96%E5%AD%BD%E5%91%80-%E6%88%98%E6%96%97%E6%9C%8D%E6%97%97%E8%A2%8D-32P-08-22">Tina很妖孽呀 战斗服旗袍 32P</a></p>
+  <p><a href="https://telegra.ph/Tina%E5%BE%88%E5%A6%96%E5%AD%BD%E5%91%80-%E6%B8%85%E7%BA%AF%E6%A0%A1%E5%9B%AD%E5%AD%A6%E5%A6%B9-26P-08-22">Tina很妖孽呀 清纯校园学妹 26P</a></p>
+  <p><a href="https://telegra.ph/Tina%E5%BE%88%E5%A6%96%E5%AD%BD%E5%91%80-%E9%AD%85%E9%AD%94%E5%A7%90%E5%A7%90-53P-08-22">Tina很妖孽呀 魅魔姐姐 53P</a></p>
 </body>
 </html>
