--- a/rua阮阮全集/menu.html
+++ b/rua阮阮全集/menu.html
@@ -14,6 +14,13 @@
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE---%E5%88%9D%E6%81%8B%E7%BC%8E%E5%B8%A6-08-19">rua阮阮 - 初恋缎带</a></p> 
   <p><a href="http://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%B0%8F%E7%8B%97%E7%88%B1%E7%A5%9E10-08-21">rua阮阮 小狗爱神1.0</a></p>
   <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%B0%8F%E4%B8%B8%E5%AD%90-88P-08-21">rua阮阮 小丸子 88P</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E7%99%BD%E4%B8%9D%E5%A4%96%E5%8D%96%E5%91%98-40P-08-22">rua阮阮 白丝外卖员 40P</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E9%9B%AA%E7%B3%95-40P-08-22">rua阮阮 雪糕 40P</a></p>
+  <p><a href="https://telegra.ph/rua%E9%98%AE%E9%98%AE-%E5%A4%B1%E4%B9%90%E5%9B%AD-55P-08-22">rua阮阮 失乐园 55P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
