--- a/不呆猫全集/menu.html
+++ b/不呆猫全集/menu.html
@@ -17,6 +17,12 @@
   <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB-%E9%BB%91%E6%97%97%E8%A2%8D%E8%BF%87%E8%86%9D%E8%A2%9C%E5%BE%A1%E5%A7%90-42P-08-21">不呆猫 黑旗袍过膝袜御姐 42P</a></p>
   <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB-%E8%B0%83%E6%95%99%E5%A5%B3%E7%8E%8B-91P1V-08-21">不呆猫 调教女王 91P1V</a></p>
   <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB-%E6%88%98%E5%9B%BD%E8%A2%8D-140P2V-08-21">不呆猫 战国袍 140P2V</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB-%E4%B8%8A%E5%8F%B8%E8%B7%AF%E5%87%BA-70P1V-08-22">不呆猫 上司路出 70P1V</a></p>
+  <p><a href="https://telegra.ph/%E4%B8%8D%E5%91%86%E7%8C%AB-%E6%94%BE%E8%AF%BE%E5%90%8E%E9%87%8E%E5%A4%96JK-101P-08-22">不呆猫 放课后野外JK 101P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
