--- a/小瑶幺幺全集/menu.html
+++ b/小瑶幺幺全集/menu.html
@@ -14,7 +14,7 @@
   <p><a href="http://telegra.ph/%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA---%E8%87%AA%E6%8B%8D%E7%89%88%E9%93%B6%E7%8B%BC-08-21">小瑶幺幺 - 自拍版银狼</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA---%E6%AF%92%E8%9B%87-08-21">小瑶幺幺 - 毒蛇</a></p>
   <p><a href="https://telegra.ph/%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA---%E4%BA%91%E7%92%83%E8%87%AA%E6%8B%8D%E7%89%88-57P10V-602MB-08-21">小瑶幺幺 - 云璃自拍版 [57P10V-602MB]</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%8F%E7%91%B6%E5%B9%BA%E5%B9%BA-%E7%AC%A6%E7%8E%84%E8%87%AA%E6%8B%8D%E7%89%88-62P-%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-08-22">小瑶幺幺 符玄自拍版 62P 星穹铁道</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
