--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -24,5 +24,11 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%A5%B6%E5%A8%87%E6%97%A5%E5%B8%B8-157P4V-08-22">日奈娇 奶娇日常 157P4V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%93%9D%E7%99%BD%E6%9D%A1-150P6V-08-22">日奈娇 蓝白条 150P6V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%99%BD%E7%BA%B1%E8%A1%A3-136P4V-08-22">日奈娇 白纱衣 136P4V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%BD%AA%E4%BF%AE%E5%A5%B3-120P7V-08-22">日奈娇 罪修女 120P7V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%9E%82%E8%80%B3%E5%85%94-105P3V-08-22">日奈娇 垂耳兔 105P3V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
