--- a/HaneAme雨波_全集/menu.html
+++ b/HaneAme雨波_全集/menu.html
@@ -6,8 +6,13 @@
 <body>
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="./HaneAme雨波 NO.068 Tate no Yuusha no Nariagari Raphtalia/index.html">HaneAme雨波 NO.068 Tate no Yuusha no Nariagari Raphtalia</a></p> 
-  <p><a href="./HaneAme雨波 NO.290 24年01月 Original_Silver Kimono 2024_銀鈿和服 + [47P-253MB]/index.html">HaneAme雨波 NO.290 24年01月 Original_Silver Kimono 2024_銀鈿和服 + [47P-253MB]</a></p> 
-
+  <p><a href="https://telegra.ph/%E9%9B%A8%E6%B3%A2Haneame-2024%E5%B9%B404%E6%9C%88%E8%AE%A2%E9%98%85-144P9V-108G-%E6%B1%89%E6%9C%8D-08-22">雨波Haneame 2024年04月订阅 [144P9V-1.08G] (汉服)</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%A8%E6%B3%A2Haneame-2024%E5%B9%B404%E6%9C%88%E8%AE%A2%E9%98%85-144P9V-108G-08-22">雨波Haneame 2024年04月订阅 [144P9V-1.08G]</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
