--- a/Quan冉有点饿(拖拉大王)全集/menu.html
+++ b/Quan冉有点饿(拖拉大王)全集/menu.html
@@ -25,9 +25,9 @@
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E5%B4%A9%E5%9D%8F-%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E8%8A%B1%E7%81%AB-62P-08-21">Quan冉有点饿 - 崩坏 星穹铁道 花火 [62P]</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E8%8A%99%E8%8E%89%E8%8E%B2%E5%90%8C%E4%BA%BA-08-21">Quan冉有点饿 - 芙莉莲同人</a></p>
   <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF---%E7%8E%9B%E5%A5%87%E7%8E%9B-22P-08-21">Quan冉有点饿 - 玛奇玛 22P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E9%AD%85%E9%AD%94%E5%85%9418P-08-22">Quan冉有点饿 魅魔兔18P</a></p>
+  <p><a href="https://telegra.ph/quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E5%B0%8F%E6%98%A5%E6%97%A5%E5%92%8C-54P-08-22">quan冉有点饿 小春日和 54P</a></p>
+  <p><a href="https://telegra.ph/Quan%E5%86%89%E6%9C%89%E7%82%B9%E9%A5%BF-%E7%BA%B3%E8%A5%BF%E5%A6%B2-46P-%E5%8E%9F%E7%A5%9E-08-22">Quan冉有点饿 纳西妲 46P (原神)</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
