--- a/九曲jean全集/menu.html
+++ b/九曲jean全集/menu.html
@@ -14,8 +14,8 @@
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF%E8%8B%B1%E4%BB%99%E5%BA%A7%E6%8A%A4%E5%A3%AB-08-19">九曲Jean 碧蓝航线英仙座护士</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E4%BA%8C%E4%BD%90Nisa---%E9%BB%91%E7%B4%AB%E8%95%BE%E4%B8%9D%E5%A5%97-30p-2v-08-20">九曲Jean 二佐Nisa - 黑紫蕾丝套 30p 2v</a></p>
   <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean%E4%BA%8C%E4%BD%90Nisa-%E4%B8%87%E5%9C%A3%E8%8A%82%E5%8F%8C%E4%BA%BA%E7%A7%81%E6%88%BF%E5%B0%8F%E7%8C%AB-40P-08-22">九曲Jean&二佐Nisa 万圣节双人私房小猫 40P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E5%A4%A9%E5%91%BD%E7%8C%AB%E8%80%B3%E6%9C%B5-21P-94MB-08-22">九曲Jean 天命猫耳朵 [21P-94MB]</a></p>
+  <p><a href="https://telegra.ph/%E4%B9%9D%E6%9B%B2Jean-%E6%99%9A%E5%AE%89%E4%BA%BA%E9%B1%BC-40P2V-08-22">九曲Jean 晚安人鱼 40P2V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
