--- a/咬人小小兔全集/menu.html
+++ b/咬人小小兔全集/menu.html
@@ -15,10 +15,10 @@
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%A4%B9%E5%BF%83%E9%A5%BC%E5%B9%B279P1V-Queen-card-08-21">咬人小小兔 6月作品『夹心饼干』79P+1V Queen card</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%B0%8F%E5%B0%8F%E5%85%94%E5%A4%A7%E5%8D%B1%E6%9C%BA73P1V-%E5%B0%8F%E5%89%A7%E5%9C%BA-08-22">咬人小小兔 6月作品『小小兔大危机』73P+1V 小剧场</a></p>
   <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-6%E6%9C%88%E4%BD%9C%E5%93%81%E5%A5%B6%E5%98%B4%E6%AD%BB%E5%BA%93%E6%B0%B472P1V-Gee-08-22">咬人小小兔 6月作品『奶嘴死库水』72P+1V Gee</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-5%E6%9C%88%E6%9C%88%E7%A5%A8%E7%89%B9%E5%85%B8%E5%AE%B6%E5%BA%AD%E6%95%99%E5%B8%88%E7%A7%81%E6%8E%88%E8%AF%BE43P1V-Rolling-08-22">咬人小小兔 5月月票特典『家庭教师私授课』43P+1V Rolling</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-5%E6%9C%88%E4%BD%9C%E5%93%81%E8%A1%97%E9%9C%B8-%E9%9F%A9%E8%9B%9B%E4%BF%9080P1V-Tell-me-08-22">咬人小小兔 5月作品『街霸-韩蛛俐』80P+1V Tell me</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-5%E6%9C%88%E4%BD%9C%E5%93%81%E7%94%B0%E8%80%95%E8%AE%B073P1V%E5%B0%8F%E5%89%A7%E5%9C%BA-08-22">咬人小小兔 5月作品『田耕记』73P+1V小剧场</a></p>
+  <p><a href="https://telegra.ph/%E5%92%AC%E4%BA%BA%E5%B0%8F%E5%B0%8F%E5%85%94-5%E6%9C%88%E4%BD%9C%E5%93%81%E8%BF%B7%E9%80%94%E5%B0%8F%E7%BA%A2%E5%B8%BD70P1V-GENTLEMAN-08-22">咬人小小兔 5月作品『迷途小红帽』70P+1V GENTLEMAN</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
