--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -29,7 +29,7 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E6%9F%B4%E9%83%A1%E9%AD%94%E6%9C%AF%E5%B8%88-%E7%BB%9A%E7%83%82%E5%A4%9C%E6%A2%A6-50P-08-22">封疆疆 柴郡魔术师 绚烂夜梦 50P</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E5%8E%9F%E7%A5%9E-%E4%B9%85%E5%B2%90%E5%BF%8D-08-22">封疆疆 原神 久岐忍</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86v-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-29P-08-22">封疆疆v 恰巴耶夫 29P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B%E5%A5%B3%E8%AD%A6-38P-08-22">封疆疆 雷电将军女警 38P (原神)</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B-33P-%E5%8E%9F%E7%A5%9E-08-22">封疆疆 雷电将军 33P (原神)</a></p>
 </body>
 </html>
