--- a/桜桃喵全集/menu.html
+++ b/桜桃喵全集/menu.html
@@ -16,6 +16,18 @@
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5---%E9%80%90%E6%B8%90%E5%8D%87%E6%B8%A9-37P2V-645MB-08-20">桜桃喵 - 逐渐升温 [37P2V-645MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E5%B0%8F%E6%9C%88%E5%85%89-45P-43172MB-08-21">桜桃喵 小月光 [45P-431.72MB]</a></p>
   <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E7%94%9C%E6%A8%B1%E6%A1%83-37P1V-08-22">桜桃喵 甜樱桃 37P1V</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E8%8A%AD%E8%8A%AD%E6%8B%89-48P-08-22">桜桃喵 芭芭拉 48P (原神)</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E5%9F%8E%E5%B8%82%E4%B8%AD%E7%9A%84%E7%B2%BE%E7%81%B5-%E7%B2%BE%E7%81%B5OL-08-22">桜桃喵 城市中的精灵 精灵OL</a></p>
+  <p><a href="https://telegra.ph/%E6%A1%9C%E6%A1%83%E5%96%B5-%E5%A4%9C%E7%BA%B1-43P-08-22">桜桃喵 夜纱 43P</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
