--- a/疯猫ss全集/menu.html
+++ b/疯猫ss全集/menu.html
@@ -17,6 +17,6 @@
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E5%B0%91%E5%A5%B3%E8%A1%A3%E6%A9%B1-%E8%BF%9E%E4%BD%93%E5%A5%B3%E4%BB%86%E8%A3%85-58P-08-21">疯猫ss 少女衣橱 连体女仆装 58P</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E6%A8%8B%E5%8F%A3%E5%86%86%E9%A6%99-39P-08-21">疯猫ss 樋口円香 39P</a></p>
   <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E4%B8%83%E4%B8%89%E7%89%B9%E5%B7%A5-48P-08-21">疯猫ss 七三特工 48P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E7%96%AF%E7%8C%ABss-%E5%B8%83%E6%B4%9B%E5%A6%AE%E5%A8%85-%E5%A4%A7%E9%B8%AD%E9%B8%AD56P-%E5%B4%A9%E5%9D%8F-08-22">疯猫ss 布洛妮娅 大鸭鸭56P 崩坏</a></p>
 </body>
 </html>
