--- a/Sayo Momo(SayoMomo)全集/menu.html
+++ b/Sayo Momo(SayoMomo)全集/menu.html
@@ -16,7 +16,7 @@
   <p><a href="https://telegra.ph/Sayo-Momo-Navia-Genshin-Impact-08-22">Sayo Momo Navia (Genshin Impact)</a></p>
   <p><a href="https://telegra.ph/SayoMomo-Gamer-Girl-08-22">SayoMomo Gamer Girl</a></p>
   <p><a href="https://telegra.ph/Sayo-Momo-Azur-Lane-KMS-Hindenburg-08-22">Sayo Momo Azur Lane KMS Hindenburg</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Sayo-Momo-Frieren-x-Fern-94P17V-08-22">Sayo Momo Frieren x Fern 94P17V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
