--- a/Umeko J March全集/menu.html
+++ b/Umeko J March全集/menu.html
@@ -13,6 +13,13 @@
   <p><a href="https://telegra.ph/Umeko-J-Rupee-with-videos-63P10V-08-22">Umeko J Rupee (with videos) 63P10V</a></p>
   <p><a href="https://telegra.ph/Umeko-J-Toph-Beifong-210P7V-08-22">Umeko J Toph Beifong 210P7V</a></p>
   <p><a href="https://telegra.ph/Umeko-J-Matoi-Ryuko97P3V-157G-08-22">Umeko J Matoi Ryuko[97P3V-1.57G]</a></p>
+  <p><a href="https://telegra.ph/Umeko-J-Viper-Valorant-08-22">Umeko J Viper (Valorant)</a></p>
+  <p><a href="https://telegra.ph/Umeko-J-Kitana-08-22">Umeko J Kitana</a></p>
+  <p><a href="https://telegra.ph/Umeko-J-Magia-Baiser-08-22">Umeko J Magia Baiser</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
