--- a/rioko凉凉子全集/menu.html
+++ b/rioko凉凉子全集/menu.html
@@ -20,6 +20,13 @@
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E5%A1%9E%E5%8B%92%E6%B6%85-08-21">凉凉子 塞勒涅</a></p>
   <p><a href="http://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88%E6%A4%BF%E5%AF%BC%E6%B8%B8-08-22">凉凉子 蔚蓝档案椿导游</a></p>
   <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%87%91%E9%B9%BF%E5%8F%B7-08-22">凉凉子 金鹿号</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E4%BC%98%E8%8F%88%E6%B5%AA%E8%8A%B1%E9%AA%91%E5%A3%AB-08-22">凉凉子 优菈浪花骑士</a></p>
+  <p><a href="https://telegra.ph/%E5%87%89%E5%87%89%E5%AD%90-%E9%98%BF%E5%B0%94%E6%AF%94%E6%81%A9%E6%97%97%E8%A2%8D-08-22">凉凉子 阿尔比恩旗袍</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
