--- a/封疆疆全集/menu.html
+++ b/封疆疆全集/menu.html
@@ -31,5 +31,33 @@
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86v-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-29P-08-22">封疆疆v 恰巴耶夫 29P</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B%E5%A5%B3%E8%AD%A6-38P-08-22">封疆疆 雷电将军女警 38P (原神)</a></p>
   <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E9%9B%B7%E7%94%B5%E5%B0%86%E5%86%9B-33P-%E5%8E%9F%E7%A5%9E-08-22">封疆疆 雷电将军 33P (原神)</a></p>
+  <p><a href="http://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-%E5%85%94%E5%A5%B3%E9%83%8E-41P-08-22">封疆疆 喜多川海梦 兔女郎 41P</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E5%96%9C%E5%A4%9A%E5%B7%9D%E6%B5%B7%E6%A2%A6-%E9%BB%91%E6%B1%9F%E9%9B%AB-41P-08-22">封疆疆 喜多川海梦 黑江雫 41P</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E5%85%AB%E9%87%8D%E7%A5%9E%E5%AD%90%E5%85%AC%E5%BC%8Fver-%E5%8E%9F%E7%A5%9E-08-22">封疆疆 八重神子公式ver (原神)</a></p>
+  <p><a href="https://telegra.ph/%E5%B0%81%E7%96%86%E7%96%86-%E7%94%B3%E9%B9%A4%E6%B5%B7%E7%81%AF%E8%8A%82-40P-619MB-08-22">封疆疆 申鹤海灯节 [40P-619MB] (原神)</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>  
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p> 
 </body>
 </html>
