--- a/屿鱼全集/menu.html
+++ b/屿鱼全集/menu.html
@@ -33,5 +33,11 @@
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E5%A5%B3%E4%BB%86-08-21">屿鱼 女仆</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E8%94%9A%E8%93%9D%E6%A1%A3%E6%A1%88-toki%E5%85%94%E5%A5%B3%E9%83%8E-28P-08-21">屿鱼 蔚蓝档案 toki兔女郎 28P</a></p>
   <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E5%AE%89%E5%85%8B%E9%9B%B7%E5%A5%87-33P-08-21">屿鱼 安克雷奇 33P</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E5%B0%8F%E6%81%B6%E9%AD%94%E8%87%AA%E6%90%AD-08-22">屿鱼 小恶魔自搭</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E6%81%B0%E5%B7%B4%E8%80%B6%E5%A4%AB-08-22">屿鱼 恰巴耶夫</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E7%A2%A7%E8%93%9D%E8%88%AA%E7%BA%BF-%E6%9F%B4%E9%83%A1-08-22">屿鱼 碧蓝航线 柴郡</a></p>
+  <p><a href="https://telegra.ph/%E5%B1%BF%E9%B1%BC-%E9%BB%91%E7%BB%BF-24P-387M-08-22">屿鱼 黑绿 24P 387M</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
