--- a/日奈娇全集/menu.html
+++ b/日奈娇全集/menu.html
@@ -26,9 +26,9 @@
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%99%BD%E7%BA%B1%E8%A1%A3-136P4V-08-22">日奈娇 白纱衣 136P4V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%BD%AA%E4%BF%AE%E5%A5%B3-120P7V-08-22">日奈娇 罪修女 120P7V</a></p>
   <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%9E%82%E8%80%B3%E5%85%94-105P3V-08-22">日奈娇 垂耳兔 105P3V</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E7%99%BD%E5%B0%8F%E7%BB%B5%E7%BE%8A-70P-08-22">日奈娇 白小绵羊 70P</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E5%AD%A6%E7%94%9F%E5%A6%B9%E8%87%AA%E6%8B%8D-49P11V-08-22">日奈娇 学生妹自拍 49P11V</a></p>
+  <p><a href="https://telegra.ph/%E6%97%A5%E5%A5%88%E5%A8%87-%E8%8A%B1%E9%AD%81%E7%8B%90%E5%A6%96-144P2V-08-22">日奈娇 花魁狐妖 144P2V</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
