--- a/杏仁曲奇全集/menu.html
+++ b/杏仁曲奇全集/menu.html
@@ -9,7 +9,7 @@
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87---%E5%9B%9B%E5%A6%B9-08-20">杏仁曲奇 - 四妹</a></p>
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E5%A5%B3%E4%BB%86%E7%BA%A6%E5%AE%9A%E6%97%B6%E9%97%B4-48P-08-22">杏仁曲奇 女仆约定时间 48P</a></p>
   <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E7%94%9F%E5%BE%92%E4%BC%9A%E5%9D%8F%E7%8C%AB%E7%8C%AB-52P-08-22">杏仁曲奇 生徒会坏猫猫 52P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E6%9D%8F%E4%BB%81%E6%9B%B2%E5%A5%87-%E9%BB%91%E5%85%BD-%E7%B2%BE%E7%81%B5%E5%A5%B3%E7%8E%8B-60P-08-22">杏仁曲奇 黑兽 精灵女王 60P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
