--- a/鹿八岁全集/menu.html
+++ b/鹿八岁全集/menu.html
@@ -10,5 +10,13 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81---%E4%BF%AE%E5%A5%B3%E5%AE%A1%E5%88%A4%E6%97%A5-71P1V-111GB-08-19">鹿八岁 - 修女审判日 [71P+1V-1.11GB]</a></p> 
+  <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81baby-%E7%BD%91%E8%B4%B7%E5%B0%91%E5%A5%B3%E6%95%91%E8%B5%8E%E7%89%A7%E5%8C%96142P1V-08-22">鹿八岁baby 网贷少女救赎(牧化）142P1V</a></p>
+  <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81baby-%E5%8E%9F%E7%A5%9E-%E5%A4%9C%E5%85%B0-62P-08-22">鹿八岁baby 原神 夜兰 62P</a></p>
+  <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81baby-%E6%AD%BB%E6%88%96%E7%94%9F-%E5%A5%B3%E5%A4%A9%E7%8B%97-71P1V-08-22">鹿八岁baby 死或生 女天狗 71P1V</a></p>
+  <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81baby-%E8%B5%9B%E5%8D%9A%E6%9C%8B%E5%85%8B%E8%BE%B9%E7%BC%98%E8%A1%8C%E8%80%85-%E9%9C%B2%E8%A5%BF-60P1V-08-22">鹿八岁baby 赛博朋克：边缘行者 露西 60P1V</a></p>
+  <p><a href="https://telegra.ph/%E9%B9%BF%E5%85%AB%E5%B2%81baby-%E5%B4%A9%E5%9D%8F%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E5%8D%A1%E8%8A%99%E5%8D%A1-61P1V-08-22">鹿八岁baby 崩坏∶星穹铁道 卡芙卡 61P1V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
