--- a/Nyako喵子全集/menu.html
+++ b/Nyako喵子全集/menu.html
@@ -11,7 +11,7 @@
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8854%E8%AF%B1%E6%8B%90%E6%9C%AC-08-22">Nyako喵子 电子版54诱拐本</a></p>  
   <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%94%B5%E5%AD%90%E7%89%8854-%E8%87%AA%E6%8B%8D-08-22">Nyako喵子 电子版54 自拍</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/Nyako%E5%96%B5%E5%AD%90-%E7%97%B4%E5%A5%B3%E3%83%A1%E3%82%A4%E3%83%89-151P-08-22">Nyako喵子 痴女メイド 151P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
