--- a/花铃全集/menu.html
+++ b/花铃全集/menu.html
@@ -19,8 +19,8 @@
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E5%B0%8F%E6%BA%AA%E6%AD%BB%E5%BA%93%E6%B0%B4-36P-08-22">花铃 小溪死库水 36P</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E4%BA%A4%E9%94%99%E6%88%98%E7%BA%BF%E5%8D%A1%E7%BC%87%E5%A8%9C-08-22">花铃 交错战线卡缇娜</a></p>
   <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E7%88%B1%E4%B8%BD%E4%B8%9D%E5%85%94%E5%A5%B3%E9%83%8E-66P-08-22">花铃 爱丽丝兔女郎 66P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E7%BA%AF%E7%99%BD%E5%B0%8F%E8%8A%B1%E5%AB%81-08-22">花铃 纯白小花嫁</a></p>
+  <p><a href="https://telegra.ph/%E8%8A%B1%E9%93%83-%E7%A2%A7%E8%93%9D%E6%A1%A3%E6%A1%88-%E7%BE%8E%E6%B8%B8%E6%B3%B3%E8%A3%85-08-22">花铃 碧蓝档案 美游泳装</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
 </html>
