--- a/虎森森全集/menu.html
+++ b/虎森森全集/menu.html
@@ -12,8 +12,8 @@
   <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E9%BB%91%E4%B8%9D%E7%9C%BC%E9%95%9C%E5%A8%98-60P-08-21">虎森森 黑丝眼镜娘 60P</a></p>
   <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E8%A7%A6%E7%99%BD%E6%8A%A4%E5%A3%AB-60P-08-21">虎森森 触白护士 60P</a></p>
   <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E4%B8%8B%E7%8F%AD%E5%90%8E%E7%9A%84OL2-108P-08-22">虎森森 下班后的OL2 108P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E5%9C%A3%E8%AF%9E%E7%B2%BE%E7%81%B5-61P-08-22">虎森森 圣诞精灵 61P</a></p>
+  <p><a href="https://telegra.ph/%E8%99%8E%E6%A3%AE%E6%A3%AE-%E9%80%8F%E6%98%8E%E6%8A%A4%E5%A3%AB-08-22">虎森森 透明护士</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
