--- a/雪晴Astra全集/menu.html
+++ b/雪晴Astra全集/menu.html
@@ -31,6 +31,12 @@
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra-%E7%94%98%E9%9B%A8%E5%86%85%E8%A1%A3-45P1V%E5%8E%9F%E7%A5%9E-08-21">雪晴Astra 甘雨内衣 45P1V(原神)</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra-%E5%9C%A3%E8%AF%9E%E8%8A%82-%E7%99%BD%E9%9B%AA-123P2V-08-22">雪晴Astra 圣诞节 白雪 123P2V</a></p>
   <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra-%E9%80%8F%E6%98%8E%E5%A5%B3%E4%BB%86-71P2V-08-22">雪晴Astra 透明女仆 71P2V</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4Astra-%E6%A3%AE%E8%9A%BA%E8%8A%AD%E8%95%BE-94P1V-08-22">雪晴Astra 森蚺芭蕾 94P1V</a></p>
+  <p><a href="https://telegra.ph/%E9%9B%AA%E6%99%B4-%E5%B4%A9%E5%9D%8F%E6%98%9F%E7%A9%B9%E9%93%81%E9%81%93-%E8%8A%B1%E7%81%AB-78P3V-08-22">雪晴 崩坏星穹铁道 花火 78P3V</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
