--- a/千澄全集/menu.html
+++ b/千澄全集/menu.html
@@ -10,7 +10,7 @@
   <hr>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="https://telegra.ph/%E5%8D%83%E6%BE%84---%E5%9E%82%E8%80%B3%E5%85%94-31P-918MB-08-21">千澄 - 垂耳兔 [31P-91.8MB]</a></p>  
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E5%8D%83%E6%BE%84-%E7%8C%AB%E5%A8%9860P-08-22">千澄 猫娘60P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
