--- a/过期米线线喵全集/menu.html
+++ b/过期米线线喵全集/menu.html
@@ -13,7 +13,7 @@
   <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5---%E8%AE%B8%E6%84%BF%E6%97%A5-57P-720MB-08-20">过期米线线喵 - 许愿日 [57P-720MB]</a></p>
   <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E7%BB%9D%E7%BB%9D%E7%B4%AB-51P-404MB-08-21">过期米线线喵 绝绝紫 [51P-404MB]</a></p>
   <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-AI%E5%A5%B3%E6%95%99%E5%B8%88-57P-08-21">过期米线线喵 AI女教师 57P</a></p>
-  <p><a href="../index.html">返回总目录</a></p>
+  <p><a href="https://telegra.ph/%E8%BF%87%E6%9C%9F%E7%B1%B3%E7%BA%BF%E7%BA%BF%E5%96%B5-%E5%B0%8F%E7%8B%97%E6%97%A5%E8%AE%B0-26P-08-22">过期米线线喵 小狗日记 26P</a></p>
   <p><a href="../index.html">返回总目录</a></p>
   <p><a href="../index.html">返回总目录</a></p>
 </body>
